--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 		<meta property="og:title" 		content="Episode 6: Everyone&#39;s a Race Fan"/>
 		<meta property="og:image" 		content="http://a.images.blip.tv/RevvedUpShow-Episode6EveryonesARaceFan378.png"/>
 		<meta property="og:description" content="Racing fans come from all walks of life. Some are born into it, others marry into it, and the rest just figure it out a little later than everyone else. And over the course of the summer, Mike and John discovered that pretty much everyone is a race fan. Join the brothers for the season finale of R..."/>
-		<meta property="og:video" content="http://staging.blip.tv/revvedup/episode-6-everyone-s-a-race-fan-6628845" />
+		<meta property="og:video" content="http://blip.tv/revvedup/episode-6-everyone-s-a-race-fan-6628845" />
 		<meta property="og:video:type" content="text/html" />
-
 <body>
 Hello
 </body>
