--- a/index.html
+++ b/index.html
@@ -16,19 +16,13 @@
 		<meta name="keywords" content="tailgate32"/>
 		<meta name="keywords" content="tailgating"/>
 		<meta name="keywords" content="nascar"/>
+		
+		 <meta property="og:image" 		content="http://a.images.blip.tv/RevvedUpShow-Episode6EveryonesARaceFan378.png"/>
+ 		<meta property="og:video"        content="http://staging.blip.tv/play/AYOUzFEC.html?p=1">
+ 		<meta property="og:video:type"   content="text/html">     <!-- html for others -->
+ 		<meta property="og:video:height" content="640">
+		 <meta property="og:video:width"  content="385">
 
-		<meta name="twitter:card" value="summary"/>
-		<meta name="twitter:site" value="@blip"/>
-		<meta name="twitter:creator" value="@tailgate32"/>
-		<meta name="twitter:image" value="http://0.images.staging.blipcdn.com/g?src=RevvedUpShow-Episode6EveryonesARaceFan378.png&w=120&h=120&fmt=png&bc=FFFFFF&ac=0"/>	
-
-		<!-- FB Open Graph Tags -->
-		<meta property="og:type" 		content="video.episode"/>
-		<meta property="og:title" 		content="Episode 6: Everyone&#39;s a Race Fan"/>
-		<meta property="og:image" 		content="http://a.images.blip.tv/RevvedUpShow-Episode6EveryonesARaceFan378.png"/>
-		<meta property="og:description" content="Racing fans come from all walks of life. Some are born into it, others marry into it, and the rest just figure it out a little later than everyone else. And over the course of the summer, Mike and John discovered that pretty much everyone is a race fan. Join the brothers for the season finale of R..."/>
-		<meta property="og:video" content="http://blip.tv/revvedup/episode-6-everyone-s-a-race-fan-6628845" />
-		<meta property="og:video:type" content="text/html" />
 <body>
 Hello
 </body>
