--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<meta name="keywords" content="nascar"/>
 		
 		 <meta property="og:image" 		content="http://a.images.blip.tv/RevvedUpShow-Episode6EveryonesARaceFan378.png"/>
- 		<meta property="og:video"        content="http://staging.blip.tv/play/AYOUzFEC.html?p=1">
+ 		<meta property="og:video"        content="http://blip.tv/play/AYOUzFEC.html?p=1">
  		<meta property="og:video:type"   content="text/html">     <!-- html for others -->
  		<meta property="og:video:height" content="640">
 		 <meta property="og:video:width"  content="385">
