--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" class="standards">
+<html lang="en">
+    <head>
 
-<head prefix="og: http://ogp.me/ns# bliptvviewer: http://ogp.me/ns/apps/bliptvviewer#">
 
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Watch Episode 6: Everyone&#39;s a Race Fan | Revved Up Episodes | Sports & Cars Videos | Blip</title>
-
-		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-
-		
-		<meta name="description" content="Racing fans come from all walks of life. Some are born into it, others marry into it, and the rest just figure it out a little later than everyone else. And over the course of the summer, Mike and John discovered that pretty much everyone is a race fan. Join the brothers for the season finale of REVVED UP."/>
-		
-
-		<meta name="keywords" content="Revved Up"/>
-		<meta name="keywords" content="Revved Up blip"/>
-		<meta name="keywords" content="tailgate32"/>
-		<meta name="keywords" content="tailgating"/>
-		<meta name="keywords" content="nascar"/>
-
- <meta property="og:image" 		content="http://a.images.blip.tv/RevvedUpShow-Episode6EveryonesARaceFan378.png"/>
- <meta property="og:video"        content="http://a.blip.tv/api.swf#AYOUzFEC">
- <meta property="og:video:type"   content="application/x-shockwave-flash">
- <meta property="og:video:height" content="640">
- <meta property="og:video:width"  content="385">		
-
+<meta property="og:title" content="PRETTY LIGHTS around the block (directors cut)">
+            <meta property="og:description" content="I was brought on board by Strawberry Frog, a creative agency based in NY, and LG to make a music video for Pretty Lights. I worked closely with Derek (Pretty Lights)&hellip;">
+            <meta property="og:image" content="http://b.vimeocdn.com/ts/445/986/445986348_1280.jpg">
+            <meta property="og:type" content="video">
+            <meta property="og:video" content="http://vimeo.com/moogaloop.swf?clip_id=72104173">
+            <meta property="og:video:secure_url" content="https://vimeo.com/moogaloop.swf?clip_id=72104173">
+            <meta property="og:video:type" content="application/x-shockwave-flash">
+            <meta property="og:video:width" content="640">
+            <meta property="og:video:height" content="360">
+            <meta property="og:site_name" content="Vimeo">
+            <meta property="og:url" content="http://vimeo.com/72104173">
+            <meta property="video:duration" content="242">
+</head>
 <body>
 Hello
 </body>
