--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <meta property="og:image" content="http://b.vimeocdn.com/ts/445/986/445986348_1280.jpg">
             <meta property="og:type" content="video">
             <meta property="og:video" content="http://vimeo.com/moogaloop.swf?clip_id=72104173">
-            <meta property="og:video:secure_url" content="https://vimeo.com/moogaloop.swf?clip_id=72104173">
+           <!-- <meta property="og:video:secure_url" content="https://vimeo.com/moogaloop.swf?clip_id=72104173">-->
             <meta property="og:video:type" content="application/x-shockwave-flash">
             <meta property="og:video:width" content="640">
             <meta property="og:video:height" content="360">
