--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
     <head>
 
 
-<meta property="og:title" content="PRETTY LIGHTS around the block (directors cut)">
-            <meta property="og:description" content="I was brought on board by Strawberry Frog, a creative agency based in NY, and LG to make a music video for Pretty Lights. I worked closely with Derek (Pretty Lights)&hellip;">
-            <meta property="og:image" content="http://b.vimeocdn.com/ts/445/986/445986348_1280.jpg">
+<meta property="og:title" content="Episode 6: Everyone&#39;s a Race Fan">
+<meta property="og:description" content="Racing fans come from all walks of life. Some are born into it, others marry into it, and the rest just figure it out a little later than everyone else. And over the course of the summer, Mike and John discovered that pretty much everyone is a race fan. Join the brothers for the season finale of R...">
+<meta property="og:image" content="http://a.images.blip.tv/RevvedUpShow-Episode6EveryonesARaceFan378.png">            
+<meta property="og:image" content="http://b.vimeocdn.com/ts/445/986/445986348_1280.jpg">
             <meta property="og:type" content="video">
-            <meta property="og:video" content="http://vimeo.com/moogaloop.swf?clip_id=72104173">
+           <!-- <meta property="og:video" content="http://vimeo.com/moogaloop.swf?clip_id=72104173">-->
+<meta property="og:video" content="http://blip.tv/play/AYOUzFEC.html?p=1">
            <!-- <meta property="og:video:secure_url" content="https://vimeo.com/moogaloop.swf?clip_id=72104173">-->
             <meta property="og:video:type" content="application/x-shockwave-flash">
             <meta property="og:video:width" content="640">
             <meta property="og:video:height" content="360">
-            <meta property="og:site_name" content="Vimeo">
-            <meta property="og:url" content="http://vimeo.com/72104173">
-            <meta property="video:duration" content="242">
+            <meta property="og:site_name" content="Blip">
+            <meta property="og:url" content="blip.tv/revvedup/episode/6628845">
+            <meta property="video:duration" content="307">
 </head>
 <body>
 Hello
