--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <meta property="og:video:width" content="640">
             <meta property="og:video:height" content="360">
             <meta property="og:site_name" content="Blip">
-            <meta property="og:url" content="blip.tv/revvedup/episode/6628845">
+            <meta property="og:url" content="http://blip.tv/revvedup/episode/6628845">
             <meta property="video:duration" content="307">
 </head>
 <body>
