--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta property="og:title" content="Episode 6: Everyone&#39;s a Race Fan">
 <meta property="og:description" content="Racing fans come from all walks of life. Some are born into it, others marry into it, and the rest just figure it out a little later than everyone else. And over the course of the summer, Mike and John discovered that pretty much everyone is a race fan. Join the brothers for the season finale of R...">
 <meta property="og:image" content="http://a.images.blip.tv/RevvedUpShow-Episode6EveryonesARaceFan378.png">            
-<meta property="og:image" content="http://b.vimeocdn.com/ts/445/986/445986348_1280.jpg">
             <meta property="og:type" content="video">
            <!-- <meta property="og:video" content="http://vimeo.com/moogaloop.swf?clip_id=72104173">-->
 <meta property="og:video" content="http://blip.tv/play/AYOUzFEC.html?p=1">
@@ -14,7 +13,7 @@
             <meta property="og:video:width" content="640">
             <meta property="og:video:height" content="360">
             <meta property="og:site_name" content="Blip">
-            <meta property="og:url" content="http://blip.tv/revvedup/episode/6628845">
+            <meta property="og:url" content="http://jdsipes.github.io/">
             <meta property="video:duration" content="307">
 </head>
 <body>
