--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
 </head>
 <body>
 Hello
+
+<iframe src="http://staging.blip.tv/play/AYOUhm8C.x?p=1" width="720" height="433" frameborder="0" allowfullscreen></iframe><embed type="application/x-shockwave-flash" src="http://static.staging.blipcdn.com/api.swf#AYOUhm8C" style="display:none"></embed>
 </body>
 </html>
