--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
-<html lang="en">
-    <head>
 
+<!DOCTYPE html>
+<!--[if IE 7]> <html class="ie7" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"> <![endif]--><!--[if IE 8]> <html class="ie8" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"> <![endif]--><!--[if IE 9]> <html class="ie9" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"> <![endif]--><!--[if gt IE 9]><!--><html lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" class="standards">
+<!--<![endif]--><head prefix="og: http://ogp.me/ns# bliptvviewer: http://ogp.me/ns/apps/bliptvviewer#">
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<!-- rss--><link rel="alternate" type="application/rss+xml" title="RSS Feed for Why I Love: Johnny Cash" href="/rss/flash/6642425">
+<!-- Meta Tags --><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Watch Why I Love: Johnny Cash | The Daily Guru Episodes | Music Videos | Blip</title>
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<meta name="description" content="SUBSCRIBE &amp; SHARE! Facebook: http://www.facebook.com/thedailyguru Twitter: http://twitter.com/thedailyguru Tumblr: http://thedailyguru.tumblr.com Email: thedailyguru@gmail.com Check out my daily music reviews at: http://thedailyguru.net The Daily Guru brings the finest music news and reviews and knowledge EVERY day. Sunday - Singles On Sunday Monday - New Music Monday Tuesday - Music School Wednesday - Rants &amp; Interviews (rotating basis) Thursday - Music Myths Friday - Full Album Friday Saturday - Open Letters &amp; Admissions (rotating basis) In today's video, I discuss my love for one of the all time greats: Johnny Cash. Share and enjoy. Intro Video By: Jeremy Lesniowski Daily Guru Logo By: Alex Binder">
+<meta name="keywords" content="The Daily Guru">
+<meta name="keywords" content="The Daily Guru blip">
+<meta name="keywords" content="daily guru">
+<meta name="keywords" content="dailyguru">
+<meta name="keywords" content="why i love">
 
-<meta property="og:title" content="Episode 6: Everyone&#39;s a Race Fan">
-<meta property="og:description" content="Racing fans come from all walks of life. Some are born into it, others marry into it, and the rest just figure it out a little later than everyone else. And over the course of the summer, Mike and John discovered that pretty much everyone is a race fan. Join the brothers for the season finale of R...">
-<meta property="og:image" content="http://a.images.blip.tv/RevvedUpShow-Episode6EveryonesARaceFan378.png">            
-            <meta property="og:type" content="video">
-           <!-- <meta property="og:video" content="http://vimeo.com/moogaloop.swf?clip_id=72104173">-->
-<meta property="og:video" content="http://blip.tv/play/AYOUzFEC.html?p=1">
-           <!-- <meta property="og:video:secure_url" content="https://vimeo.com/moogaloop.swf?clip_id=72104173">-->
-            <meta property="og:video:type" content="application/x-shockwave-flash">
-            <meta property="og:video:width" content="640">
-            <meta property="og:video:height" content="360">
-            <meta property="og:site_name" content="Blip">
-            <meta property="og:url" content="http://jdsipes.github.io/">
-            <meta property="video:duration" content="307">
+<meta property="fb:app_id" content="136482209767138">
+<meta property="og:site_name" content="Blip">
+<meta property="og:type" content="video">
+<meta property="og:title" content="Why I Love: Johnny Cash">
+<meta property="og:description" content="SUBSCRIBE &amp; SHARE! Facebook: http://www.facebook.com/thedailyguru Twitter: http://twitter.com/thedailyguru Tumblr: http://thedailyguru.tumblr.com Email: thedailyguru@gmail.com Check out my daily music reviews at: http://thedailyguru.net The Daily Guru brings the finest music news and reviews and k...">
+<meta property="og:url" content="http://blip.tv/thedailyguru/why-i-love-johnny-cash-6642425">
+<meta property="og:image" content="https://i.blip.tv/g?src=Thedailyguru-WhyILoveJohnnyCash503.jpg&amp;w=200&amp;h=200&amp;fmt=png&amp;bc=FFFFFF&amp;ac=0">
+<meta property="og:video" content="http://a.blip.tv/scripts/flash/stratos.swf?#file=http://blip.tv/rss/flash/6642425&amp;autostart=true&amp;showinfo=false&amp;onsite=false&amp;nopostroll=true&amp;noendcap=false&amp;captionson=true&amp;showsharebutton=false&amp;removebrandlink=false&amp;page=episode&amp;skin=BlipClassic&amp;backcolor=0x1E1E1E&amp;frontcolor=0x999999&amp;lightcolor=0xAAAAAA&amp;basecolor=0x1E1E1E&amp;floatcontrols=true&amp;fixedcontrols=true&amp;largeplaybutton=true&amp;controlsalpha=.8&amp;autohideidle=6000&amp;utm_campaign=&amp;adprovider=auditude&amp;referrer=http://blip.tv&amp;useomni=true&amp;social=true&amp;auditudezoneid=140831">
+<meta property="og:video:secure_url" content="https://blip.tv/scripts/flash/stratos.swf?#file=https://blip.tv/rss/flash/6642425&amp;autostart=true&amp;showinfo=false&amp;onsite=false&amp;nopostroll=true&amp;noendcap=false&amp;captionson=true&amp;showsharebutton=false&amp;removebrandlink=false&amp;page=episode&amp;skin=BlipClassic&amp;backcolor=0x1E1E1E&amp;frontcolor=0x999999&amp;lightcolor=0xAAAAAA&amp;basecolor=0x1E1E1E&amp;floatcontrols=true&amp;fixedcontrols=true&amp;largeplaybutton=true&amp;controlsalpha=.8&amp;autohideidle=6000&amp;utm_campaign=&amp;adprovider=auditude&amp;referrer=http://blip.tv&amp;useomni=true&amp;social=true&amp;&amp;auditudezoneid=140831">
+<meta property="og:video:width" content="1920">
+<meta property="og:video:height" content="1080">
+<meta property="og:video:type" content="application/x-shockwave-flash">
+<meta property="video:release_date" content="2013-09-18">
+<meta property="video:duration" content="156">
+<meta property="video:tag" content="web series episode">
+<meta property="video:tag" content="Music">
+<meta name="robots" content="all">
 </head>
 <body>
-Hello
-
-<iframe src="http://staging.blip.tv/play/AYOUhm8C.x?p=1" width="720" height="433" frameborder="0" allowfullscreen></iframe><embed type="application/x-shockwave-flash" src="http://static.staging.blipcdn.com/api.swf#AYOUhm8C" style="display:none"></embed>
 </body>
 </html>
