--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if IE 7]> <html class="ie7" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"> <![endif]--><!--[if IE 8]> <html class="ie8" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"> <![endif]--><!--[if IE 9]> <html class="ie9" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"> <![endif]--><!--[if gt IE 9]><!--><html lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" class="standards">
 <!--<![endif]--><head prefix="og: http://ogp.me/ns# bliptvviewer: http://ogp.me/ns/apps/bliptvviewer#">
@@ -19,7 +18,7 @@
 <meta property="og:type" content="video">
 <meta property="og:title" content="Why I Love: Johnny Cash">
 <meta property="og:description" content="SUBSCRIBE &amp; SHARE! Facebook: http://www.facebook.com/thedailyguru Twitter: http://twitter.com/thedailyguru Tumblr: http://thedailyguru.tumblr.com Email: thedailyguru@gmail.com Check out my daily music reviews at: http://thedailyguru.net The Daily Guru brings the finest music news and reviews and k...">
-<meta property="og:url" content="http://blip.tv/thedailyguru/why-i-love-johnny-cash-6642425">
+<meta property="og:url" content="http://jdsipes.github.io/">
 <meta property="og:image" content="https://i.blip.tv/g?src=Thedailyguru-WhyILoveJohnnyCash503.jpg&amp;w=200&amp;h=200&amp;fmt=png&amp;bc=FFFFFF&amp;ac=0">
 <meta property="og:video" content="http://a.blip.tv/scripts/flash/stratos.swf?#file=http://blip.tv/rss/flash/6642425&amp;autostart=true&amp;showinfo=false&amp;onsite=false&amp;nopostroll=true&amp;noendcap=false&amp;captionson=true&amp;showsharebutton=false&amp;removebrandlink=false&amp;page=episode&amp;skin=BlipClassic&amp;backcolor=0x1E1E1E&amp;frontcolor=0x999999&amp;lightcolor=0xAAAAAA&amp;basecolor=0x1E1E1E&amp;floatcontrols=true&amp;fixedcontrols=true&amp;largeplaybutton=true&amp;controlsalpha=.8&amp;autohideidle=6000&amp;utm_campaign=&amp;adprovider=auditude&amp;referrer=http://blip.tv&amp;useomni=true&amp;social=true&amp;auditudezoneid=140831">
 <meta property="og:video:secure_url" content="https://blip.tv/scripts/flash/stratos.swf?#file=https://blip.tv/rss/flash/6642425&amp;autostart=true&amp;showinfo=false&amp;onsite=false&amp;nopostroll=true&amp;noendcap=false&amp;captionson=true&amp;showsharebutton=false&amp;removebrandlink=false&amp;page=episode&amp;skin=BlipClassic&amp;backcolor=0x1E1E1E&amp;frontcolor=0x999999&amp;lightcolor=0xAAAAAA&amp;basecolor=0x1E1E1E&amp;floatcontrols=true&amp;fixedcontrols=true&amp;largeplaybutton=true&amp;controlsalpha=.8&amp;autohideidle=6000&amp;utm_campaign=&amp;adprovider=auditude&amp;referrer=http://blip.tv&amp;useomni=true&amp;social=true&amp;&amp;auditudezoneid=140831">
