--- a/index.html
+++ b/index.html
@@ -1,37 +1,121 @@
-<!DOCTYPE html>
-<!--[if IE 7]> <html class="ie7" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"> <![endif]--><!--[if IE 8]> <html class="ie8" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"> <![endif]--><!--[if IE 9]> <html class="ie9" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"> <![endif]--><!--[if gt IE 9]><!--><html lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" class="standards">
-<!--<![endif]--><head prefix="og: http://ogp.me/ns# bliptvviewer: http://ogp.me/ns/apps/bliptvviewer#">
-<meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-<!-- Meta Tags --><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Watch Why I Love: Johnny Cash | The Daily Guru Episodes | Music Videos | Blip</title>
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-<meta name="description" content="SUBSCRIBE &amp; SHARE! Facebook: http://www.facebook.com/thedailyguru Twitter: http://twitter.com/thedailyguru Tumblr: http://thedailyguru.tumblr.com Email: thedailyguru@gmail.com Check out my daily music reviews at: http://thedailyguru.net The Daily Guru brings the finest music news and reviews and knowledge EVERY day. Sunday - Singles On Sunday Monday - New Music Monday Tuesday - Music School Wednesday - Rants &amp; Interviews (rotating basis) Thursday - Music Myths Friday - Full Album Friday Saturday - Open Letters &amp; Admissions (rotating basis) In today's video, I discuss my love for one of the all time greats: Johnny Cash. Share and enjoy. Intro Video By: Jeremy Lesniowski Daily Guru Logo By: Alex Binder">
-<meta name="keywords" content="The Daily Guru">
-<meta name="keywords" content="The Daily Guru blip">
-<meta name="keywords" content="daily guru">
-<meta name="keywords" content="dailyguru">
-<meta name="keywords" content="why i love">
-
-<meta property="fb:app_id" content="136482209767138">
-<meta property="og:site_name" content="Blip">
-<meta property="og:type" content="video">
-<meta property="og:title" content="Why I Love: Johnny Cash">
-<meta property="og:description" content="SUBSCRIBE &amp; SHARE! Facebook: http://www.facebook.com/thedailyguru Twitter: http://twitter.com/thedailyguru Tumblr: http://thedailyguru.tumblr.com Email: thedailyguru@gmail.com Check out my daily music reviews at: http://thedailyguru.net The Daily Guru brings the finest music news and reviews and k...">
-<meta property="og:url" content="http://jdsipes.github.io/">
-<meta property="og:image" content="https://i.blip.tv/g?src=Thedailyguru-WhyILoveJohnnyCash503.jpg&amp;w=200&amp;h=200&amp;fmt=png&amp;bc=FFFFFF&amp;ac=0">
-<meta property="og:video" content="http://a.blip.tv/scripts/flash/stratos.swf?#file=http://blip.tv/rss/flash/6642425&amp;autostart=true&amp;showinfo=false&amp;onsite=false&amp;nopostroll=true&amp;noendcap=false&amp;captionson=true&amp;showsharebutton=false&amp;removebrandlink=false&amp;page=episode&amp;skin=BlipClassic&amp;backcolor=0x1E1E1E&amp;frontcolor=0x999999&amp;lightcolor=0xAAAAAA&amp;basecolor=0x1E1E1E&amp;floatcontrols=true&amp;fixedcontrols=true&amp;largeplaybutton=true&amp;controlsalpha=.8&amp;autohideidle=6000&amp;utm_campaign=&amp;adprovider=auditude&amp;referrer=http://blip.tv&amp;useomni=true&amp;social=true&amp;auditudezoneid=140831">
-<meta property="og:video:secure_url" content="https://blip.tv/scripts/flash/stratos.swf?#file=https://blip.tv/rss/flash/6642425&amp;autostart=true&amp;showinfo=false&amp;onsite=false&amp;nopostroll=true&amp;noendcap=false&amp;captionson=true&amp;showsharebutton=false&amp;removebrandlink=false&amp;page=episode&amp;skin=BlipClassic&amp;backcolor=0x1E1E1E&amp;frontcolor=0x999999&amp;lightcolor=0xAAAAAA&amp;basecolor=0x1E1E1E&amp;floatcontrols=true&amp;fixedcontrols=true&amp;largeplaybutton=true&amp;controlsalpha=.8&amp;autohideidle=6000&amp;utm_campaign=&amp;adprovider=auditude&amp;referrer=http://blip.tv&amp;useomni=true&amp;social=true&amp;&amp;auditudezoneid=140831">
-<meta property="og:video:width" content="1920">
-<meta property="og:video:height" content="1080">
-<meta property="og:video:type" content="application/x-shockwave-flash">
-<meta property="video:release_date" content="2013-09-18">
-<meta property="video:duration" content="156">
-<meta property="video:tag" content="web series episode">
-<meta property="video:tag" content="Music">
-<meta name="robots" content="all">
+<!doctype html>
+<html>
+<head>
 </head>
 <body>
-Hello to you!
+<iframe src="http://blip.tv/play/AYOV0UMC.s" width="720" height="433" frameborder="0" allowfullscreen></iframe>
+<div>
+Set episode to <input type="text" id="EpisodeId" /> <button id="PlayById">Go</button>
+</div>
+<div>
+<button id="Play">Play</button />
+<button id="Pause">Pause</button />
+<input id="State" type="text" />
+<input id="Progress" type="text" />
+</div>
+<div>
+<textarea id="Log" style="height:200px;width:720px;">
+</textarea>
+</div>
+
+<script>
+(function() {
+	var i = document.getElementsByTagName('iframe')[0];
+
+	/* listening to broadcasted events */
+	function receiveMessage(evt) {
+		var log = document.getElementById('Log');
+			var message = JSON.parse(evt.data);
+
+		/* 
+		 * Any window that has a variable reference to this window can postMessage to it --
+		 * Be sure that we're only handling blip player events by checking the domain!
+		 */
+		if(evt.origin !== 'http://blip.tv') {
+			return;
+		}
+
+		log.innerHTML = (evt.data +'\n\r') + log.innerHTML;
+
+		switch(message.event) {
+			case 'episode.progress' : handleEpisodeProgress(message.data.currentTime);
+				break;
+			case 'episode.playing' : handleEpisodePlaying();
+				break;
+			case 'episode.paused' : handleEpisodePaused();
+				break;
+			case 'episode.ended' : handleEpisodeEnded();
+				break;
+			case 'player.adStart' : handleAdStart();
+				break;
+			default: break;
+		}
+	}
+	window.addEventListener('message', receiveMessage);
+
+
+	function handleEpisodeProgress(currentTime) {
+		var d = new Date(0, 0, 0, 0, 0, Math.ceil(currentTime));
+		document.getElementById('Progress').value = [d.getHours(), d.getMinutes(), d.getSeconds()].join(':');
+	}
+
+	function handleEpisodePlaying() {
+		document.getElementById('State').value = 'playing';
+	}
+
+	function handleEpisodePaused() {
+		document.getElementById('State').value = 'paused';
+	}
+
+	function handleEpisodeEnded() {
+		document.getElementById('State').value = 'complete';
+	}
+
+	function handleAdStart() {
+		document.getElementById('State').value = 'playing advert';
+	}
+
+	/* sending events to the player */
+
+	function sendMessage(evt, data) {
+		i.contentWindow.postMessage(JSON.stringify({
+				event : evt,
+				data : data
+			}), 
+			'*'
+		);
+	}
+
+	var addEventMethod = 'addEventListener';
+	var eventPrefix = '';
+	if(!window.addEventListener) {
+		addEventMethod = 'attachEvent';
+		eventPrefix = 'on';
+	}	
+	function addClick(element, handler) {
+		element[addEventMethod](eventPrefix + 'click', handler);
+	}
+
+
+	addClick(document.getElementById('Play'), function() {
+		sendMessage('play');
+	});
+	addClick(document.getElementById('Pause'), function() {
+		sendMessage('pause');
+	});
+	addClick(document.getElementById('PlayById'), function() {
+		var id = document.getElementById('EpisodeId').value;
+		if(isNaN(parseInt(id, 10))) {
+			throw new TypeError('Episode ID must be a Number');
+		}
+
+		sendMessage('playEpisode', { episodeId : id });
+	});
+
+
+})();
+
+
+</script>
 </body>
 </html>
