"https://raw.github.com/vimeo/player-api/master/javascript/froogaloop.min.js"

--- a/playground.html
+++ b/playground.html
@@ -185,7 +185,7 @@
                 <button class="addClip" title="Add a new clip.">+ <input type="text" value="3718294" size="8" /></button>
             </div>
 
-        <script src="https://raw.github.com/vimeo/player-api/master/javascript/froogaloop.min.js"></script>
+        <script src=>"http://a.vimeocdn.com/js/froogaloop2.min.js"</script>
         <script>
             (function(){
 
