--- a/thewoodcarver6649107.html
+++ b/thewoodcarver6649107.html
@@ -14,9 +14,9 @@
 
 
     
-    <meta property="og:video" content="http://blip.tv/play/hpECg5i1EQI">
+    <meta property="og:video" content="http://vimeo.com/moogaloop.swf?clip_id=78514936">
 		
-  <!--  <meta property="og:video:secure_url" content="https://as.blip.tv/scripts/flash/stratos.swf?#file=https://blip.tv/rss/flash/6691373&autostart=true&showinfo=false&onsite=false&nopostroll=true&noendcap=false&captionson=true&showsharebutton=false&removebrandlink=false&page=episode&skin=BlipClassic&backcolor=0x1E1E1E&frontcolor=0x999999&lightcolor=0xAAAAAA&basecolor=0x1E1E1E&floatcontrols=true&fixedcontrols=true&largeplaybutton=true&controlsalpha=.8&autohideidle=6000&utm_campaign=&adprovider=auditude&referrer=http://blip.tv&useomni=true&social=true&&auditudezoneid=140831"> -->
+<meta property="og:video:secure_url" content="https://vimeo.com/moogaloop.swf?clip_id=78514936">
     <meta property="og:video:width" content="1920">
     <meta property="og:video:height" content="1080">
     <meta property="og:video:type" content="application/x-shockwave-flash">
