--- a/thewoodcarver6649107.html
+++ b/thewoodcarver6649107.html
@@ -14,9 +14,9 @@
 
 
     
-    <meta property="og:video" content="http://vimeo.com/moogaloop.swf?clip_id=78514936">
+    <meta property="og:video" content="http://api.blip.tv/v1/redirect/og_video_secure_url/6691171">
 		
-<meta property="og:video:secure_url" content="https://vimeo.com/moogaloop.swf?clip_id=78514936">
+<meta property="og:video:secure_url" content="https://api.blip.tv/v1/redirect/og_video_secure_url/6691171">
     <meta property="og:video:width" content="1920">
     <meta property="og:video:height" content="1080">
     <meta property="og:video:type" content="application/x-shockwave-flash">
