--- a/thewoodcarver6649107.html
+++ b/thewoodcarver6649107.html
@@ -14,9 +14,9 @@
 
 
     
-    <meta property="og:video" content="http://api.blip.tv/v1/redirect/og_video_secure_url/6691171">
+    <meta property="og:video" content="http://cdn.livestream.com/grid/LSPlayer.swf?channel=2degrees&fb_version=2.0&autoPlay=true">
 		
-<meta property="og:video:secure_url" content="https://api.blip.tv/v1/redirect/og_video_secure_url/6691171">
+<meta property="og:video:secure_url" content="https://cdn.livestream.com/grid/LSPlayer.swf?channel=2degrees&fb_version=2.0&autoPlay=true">
     <meta property="og:video:width" content="1920">
     <meta property="og:video:height" content="1080">
     <meta property="og:video:type" content="application/x-shockwave-flash">
