--- a/short.html
+++ b/short.html
@@ -9,7 +9,7 @@
 
   <meta property="og:title" content="2014 Nissan Titan takes on Ford, Chevy &amp; the Ike Gauntlet 2.0 Mega Tow Test (Episode 1)">
     <meta property="og:description" content="( http://www.TFLtruck.com ) What half ton pickup truck is the towing king of the world? This time we&#39;ve upped the ante and we go all in with 10,000 pounds of pain. Is it the Ford F-150 or the Nissan Titan or the new Chevy Silverado 6.2L. Today on The Fast Lane Truck we put these three of these tru...">
-    <meta property="og:url" content="http://jdsipes.github.io/thewoodcarver6649107.html">
+    <meta property="og:url" content="http://jdsipes.github.io/short.html">
     <meta property="og:image" content="https://i.blip.tv/g?src=RomanMica-2014NissanTitanTakesOnFordChevyTheIkeGauntlet20Mega963.png&w=200&h=200&fmt=png&bc=FFFFFF&ac=0">
 
 
