--- a/vmtests.html
+++ b/vmtests.html
@@ -12,7 +12,7 @@
 	<meta property="og:video:width" content="640">
 	<meta property="og:video:height" content="360">
 	<meta property="og:site_name" content="Vimeo">
-	<meta property="og:url" content="http://jdsipes.github.io/vmtests.html>
+	<meta property="og:url" content="http://jdsipes.github.io/vmtests.html">
 	<meta property="video:duration" content="506">
 
 
