--- a/thewoodcarver6649107.html
+++ b/thewoodcarver6649107.html
@@ -1,34 +1,25 @@
 <!DOCTYPE html>
 
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# video: http://ogp.me/ns/video#">
-  <meta property="fb:app_id"      content="1380441705534605" /> 
-  <meta property="og:type"        content="video.episode" /> 
+	<meta property="fb:app_id"      content="1380441705534605" /> 
+	<meta property="og:site_name" content="Blip">
+	<meta property="og:type" content="video.episode">
+	<meta property="og:title" content="Top 5 NFL MVP Candidates After 10 Weeks">
+	<meta property="og:description" content="Here are the top five most valuable players in the NFL through nine weeks, a list of NFL MVP candidates headlined by Peyton Manning">
+	<meta property="og:url" content="http://jdsipes.github.io/thewoodcarver6649107.html">
+	<meta property="og:image" content="https://i.blip.tv/g?src=Rantsports-Top5NFLMVPCandidatesAfter10Weeks619.jpg&w=200&h=200&fmt=png&bc=FFFFFF&ac=0">
+	<meta property="og:video" content="http://a.blip.tv/scripts/flash/stratos.swf">
+	<meta property="og:video:secure_url" content="https://as.blip.tv/scripts/flash/stratos.swf">
+	<meta property="og:video:width" content="1920">
+	<meta property="og:video:height" content="1080">
+	<meta property="og:video:type" content="application/x-shockwave-flash">
+	<meta property="video:release_date" content="2013-11-12"/>
+	<meta property="video:duration" content="89"/>
+	<meta property="video:tag" content="web series episode" />
+	<meta property="video:tag" content="Sports & Cars" />
 
 
- 
 
-  <meta property="og:title" content="2014 Nissan Titan takes on Ford, Chevy &amp; the Ike Gauntlet 2.0 Mega Tow Test (Episode 1)">
-    <meta property="og:description" content="( http://www.TFLtruck.com ) What half ton pickup truck is the towing king of the world? This time we&#39;ve upped the ante and we go all in with 10,000 pounds of pain. Is it the Ford F-150 or the Nissan Titan or the new Chevy Silverado 6.2L. Today on The Fast Lane Truck we put these three of these tru...">
-    <meta property="og:url" content="http://jdsipes.github.io/thewoodcarver6649107.html">
-    <meta property="og:image" content="https://i.blip.tv/g?src=RomanMica-2014NissanTitanTakesOnFordChevyTheIkeGauntlet20Mega963.png&w=200&h=200&fmt=png&bc=FFFFFF&ac=0">
-
-
-    
-    <meta property="og:video" content="http://cdn.livestream.com/grid/LSPlayer.swf?channel=2degrees&fb_version=2.0&autoPlay=true">
-		
-<meta property="og:video:secure_url" content="https://cdn.livestream.com/grid/LSPlayer.swf?channel=2degrees&fb_version=2.0&autoPlay=true">
-    <meta property="og:video:width" content="1920">
-    <meta property="og:video:height" content="1080">
-    <meta property="og:video:type" content="application/x-shockwave-flash">
-
-    <meta property="video:release_date" content="2013-11-15"/>
-    <meta property="video:duration" content="1116"/>
-		
-
-    <meta property="video:tag" content="web series episode" />
-
-    
-        <meta property="video:tag" content="Sports & Cars" />
 </head>
 <body>
 </body>
