--- a/noendcap.html
+++ b/noendcap.html
@@ -1,3 +1,4 @@
 <html>
+	//testing the no-endcap
 	<iframe  width="720" height="433" frameborder="0" class="blip-fame" scrolling="no" seamless="" allowfullscreen="" src="http://blip.tv/play/AYOYuhcC.s?p=1&autoplay=true&embed_params=brandlink%3Dhttp%3A%2F%2Fwww.epicrapbattlesofhistory.com%26brandname%3DERB%26noendcap%3Dtrue&no_postroll=true"></iframe>
 </html>
